# zealrn-desktop

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  UPSTREAM.md
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: config.yml
.github/workflows/: analyze-codeql.yaml  windows-alpha.yml
assets/freedesktop/: CMakeLists.txt  io.github.abnzrdev.zealrn.appdata.xml.in  io.github.abnzrdev.zealrn.desktop
docs/: backups-and-exports.md  developer-terminal.md  getting-started.md  learning-notes.md
docs/releases/: 0.1.0-alpha-windows-testing.md  0.1.0-alpha.md  0.1.0-linux-testing.md  0.1.0-windows-testing.md  0.1.0.md
docs/security/: audit-0.1.0.md  threat-model.md
docs/superpowers/plans/: 2026-07-12-application-appearance.md  2026-07-12-web-playground-shell.md  2026-07-13-developer-terminal.md  2026-07-13-learning-notes-release.md  2026-07-13-web-playground.md  2026-07-13-windows-alpha-release.md  2026-07-14-xterm-terminal-notes-ui.md  2026-07-15-production-onboarding-start-note.md  2026-07-15-production-update-security.md
docs/superpowers/specs/: 2026-07-12-application-appearance-design.md  2026-07-12-web-playground-shell-design.md  2026-07-13-developer-terminal-design.md  2026-07-13-learning-notes-mvp-design.md  2026-07-13-linux-alpha-release-design.md  2026-07-13-web-playground-design.md  2026-07-13-windows-alpha-release-design.md  2026-07-14-xterm-terminal-notes-ui-design.md  2026-07-15-production-onboarding-start-note-design.md  2026-07-15-production-update-security-design.md
pkg/windows/: zealrn.nsi
scripts/: install-user-local.sh  package-appimage.sh  package-deb.sh  package-windows.ps1  run-docker-preview.sh  uninstall-user-local.sh  validate-windows-package.ps1
src/app/: CMakeLists.txt  main.cpp  versioninfo.rc.in  zeal.qrc
src/app/resources/browser/: new-tab.html
src/app/resources/browser/styles/: pages.css
src/app/resources/playground/: editor.bundle.js  editor.html  preview.html
src/app/resources/terminal/: index.html  terminal.bundle.css  terminal.bundle.js
src/libs/browser/: webbridge.cpp  webbridge.h  webcontrol.cpp  webcontrol.h
src/libs/core/: CMakeLists.txt  application.cpp  application.h  docsetstorage.cpp  docsetstorage.h  networkaccessmanager.cpp  session.cpp  session.h  settings.cpp  settings.h
src/libs/core/tests/: CMakeLists.txt  applicationupdates_test.cpp  session_test.cpp  settings_test.cpp
src/libs/registry/: docset.cpp  docset.h  docsetmetadata.cpp
src/libs/ui/: CMakeLists.txt  aboutdialog.ui  allnotesdialog.cpp  allnotesdialog.h  browsertab.cpp  browsertab.h  developerterminalpanel.cpp  developerterminalpanel.h  docsetcatalog.cpp  docsetcatalog.h  docsetsdialog.cpp  docsetsdialog.h  firstusetip.cpp  firstusetip.h  helpdialog.cpp  helpdialog.h  learningnotepage.h  learningnotesexporter.cpp  learningnotesexporter.h  learningnotesmarkdown.cpp  learningnotesmarkdown.h  learningnotespanel.cpp  learningnotespanel.h  learningnotesstore.cpp  learningnotesstore.h  linuxterminalbackend.cpp  mainwindow.cpp  mainwindow.h  quicktourdialog.cpp  quicktourdialog.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  terminalbackend.cpp  terminalbackend.h  terminalbridge.cpp  terminalbridge.h  terminalsupport.cpp  terminalsupport.h  terminalview.cpp  (+13 more)
src/libs/ui/tests/: CMakeLists.txt  developerterminal_test.cpp  docsetcatalog_test.cpp  docsetmetadata_test.cpp  docsetpath_test.cpp  firstusetip_test.cpp  helpdialog_test.cpp  learningnotesexporter_test.cpp  learningnotesmarkdown_test.cpp  learningnotespanel_test.cpp  learningnotesstore_test.cpp  posixptybackend_test.cpp  quicktourdialog_test.cpp  webplayground_test.cpp  windowsterminalbackend_test.cpp
src/libs/ui/widgets/: searchedit.cpp
src/libs/util/tests/: tarixarchive_test.cpp
tools/playground/: README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json
tools/playground/src/: editor.js
tools/terminal-frontend/: THIRD_PARTY_LICENSES.md  package-lock.json  package.json
tools/terminal-frontend/src/: terminal.css  terminal.js
